<resources>
    <string name="app_name">Kakeibo</string>
    <string name="kakeibo_basic" translatable="false">Kakeibo</string>
    <string name="kakeibo_plus" translatable="false">Kakeibo Plus</string>
    <string name="kakeibo_plus_plus" translatable="false">Kakeibo Plus Plus</string>
    <string name="kakeibo_original" translatable="false">Kakeibo (Old)</string>
    <string name="settings">Settings</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="sign_in_success">Sign-in successful</string>
    <string name="sign_in_failure">Sign-in failed</string>
    <string name="sign_out_success">Sign-out successful</string>
    <string name="register">Register</string>
    <string name="not_signed_in">Not Signed In</string>
    <string name="input">INPUT</string>
    <string name="report">REPORT</string>
    <string name="search">SEARCH</string>
    <string name="list">LIST</string>
    <string name="chart">CHART</string>
    <string name="calendar">CALENDAR</string>
    <string name="detail" translatable="false">DETAIL</string>
    <string name="auth">AUTH</string>
    <string name="about" translatable="false">ABOUT</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="memo">Memo</string>
    <string name="amount">Amount</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="next">NEXT</string>
    <string name="done">DONE</string>
    <string name="back">BACK</string>
    <string name="previous">Previous</string>
    <string name="loading">Loading</string>
    <string name="next_step">Next Step</string>
    <string name="export">Export</string>
    <string name="export_date">Export [Date]</string>
    <string name="export_category">Export [Category]</string>
    <string name="currency">Currency</string>
    <string name="category">Category</string>
    <string name="event_date">Event Date</string>
    <string name="updated_date">Updated Date</string>
    <string name="category_code">Category Code</string>
    <string name="item_detail">Item Detail</string>
    <string name="category_detail">Category Detail</string>
    <string name="category_name_colon">Category Name:</string>
    <string name="income_colon">Income:</string>
    <string name="expense_colon">Expense:</string>
    <string name="balance_colon">Balance:</string>
    <string name="currency_colon">Currency:</string>
    <string name="amount_colon">Amount:</string>
    <string name="memo_colon">Memo:</string>
    <string name="category_colon">Category:</string>
    <string name="event_date_colon">Event Date:</string>
    <string name="updated_on_colon">Saved on:</string>
    <string name="language">Language</string>
    <string name="icon_colon">Icon:</string>
    <string name="stroke_thickness">Stroke Thickness</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="add_search_criterion">Add Search Criteria</string>
    <string name="search_criteria">Search Criteria</string>
    <string name="edit_item">Edit item</string>
    <string name="returning_to_monthly_report">Returning to monthly report</string>
    <string name="date_range">Date Range</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount_range">Amount Range</string>
    <string name="min">Min</string>
    <string name="max">Max</string>
    <string name="choose_category">Choose Category</string>
    <string name="undo">UNDO</string>
    <string name="swipe_to_delete">Swipe to Delete</string>
    <string name="search_result">Search Result</string>
    <string name="how_to_use_app">How to use this app</string>
    <string name="jump_to_website">Jump to website</string>
    <string name="no_item_found">No Item Found</string>
    <string name="calendar_view_not_available_in_search_mode">Calendar View is not available in Search Mode.</string>
    <string name="error">Something went wrong. Please contact support.</string>
    <string name="err_no_search_criteria_found">No Search Criteria found. Please add from the plus button.</string>
    <string name="err_please_choose_from_date">Please choose From Date.</string>
    <string name="err_please_choose_to_date">Please choose To Date.</string>
    <string name="err_please_enter_min_amount">Please enter Min Amount.</string>
    <string name="err_please_enter_max_amount">Please enter Max Amount.</string>
    <string name="err_min_amount_greater">Max Amount has to be greater than Min Amount.</string>
    <string name="err_amount_invalid">The Amount is invalid.</string>
    <string name="err_please_select_category">Please select a Category.</string>
    <string name="err_please_enter_amount">Please enter Amount.</string>
    <string name="err_amount_cannot_be_0">Amount cannot be 0.</string>
    <string name="err_max_amount_cannot_be_0">Max Amount cannot be 0.</string>
    <string name="err_memo_empty">Search word in Memo is empty.</string>
    <string name="err_from_date_older">From Date has to be younger than To Date.</string>
    <string name="err_category_name_cannot_be_empty">Category name cannot be empty.</string>
    <string name="hint_amount_spent_or_earned">Amount spent or earned</string>
    <string name="hint_memo_max_20_characters">Memo: Max 20 characters</string>
    <string name="hint_name_max_8_characters">Name: Max 8 characters</string>
    <string name="msg_item_successfully_saved">The item is successfully saved.</string>
    <string name="msg_item_successfully_deleted">The item is successfully deleted.</string>
    <string name="msg_category_successfully_deleted">The category is successfully deleted.</string>
    <string name="msg_change_successfully_saved">The change is successfully saved.</string>
    <string name="msg_no_result_found">No result found.</string>
    <string name="msg_card_is_removed">Card is removed.</string>
    <string name="msg_exit_search">You will exit the search result page and return to the monthly report of this month.</string>
    <string name="msg_all_delete_success">All the items were successfully deleted.</string>
    <string name="msg_nothing_tp_delete">There is no item to delete.</string>
    <string name="desc_delete_all_items">This will delete all the Kakeibo items that you saved on this device. Exporting to Google Drive is recommended before deletion. Tap yes to proceed.</string>
    <string name="inst_tap_plus_to_add_criteria">First, tap the plus button to add criteria. Then tap the search button to perform search.</string>
    <string name="quest_do_you_want_to_delete_item">Do you really want to delete this item?</string>
    <string name="quest_export_this_report_C">Do you want to export this report on Google Drive? It is sorted by Category.</string>
    <string name="quest_export_this_report_D">Do you want to export this report on Google Drive? It is sorted by Date.</string>
    <string name="select_file">Select file</string>
    <string name="file_created">File saved on cloud.</string>
    <string name="file_create_error">An error occurred while trying to create the file. Please try again later.</string>
    <string name="select_folder">Select a folder</string>
    <string name="folder_not_selected">No folder selected. Canceling uploading.</string>
    <string name="nothing_to_export">There is nothing to export.</string>
    <string name="empty_report">The report is empty.</string>
    <string name="tap_anywhere_to_dismiss">Tap anywhere to dismiss.</string>
    <string name="import_from_google_drive">Import from Google Drive</string>
    <string name="scratch">Scratch</string>
    <string name="append">Append</string>
    <string name="import_successful">Import Executed Successfully</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="type">Type</string>
    <string name="general">General</string>
    <string name="warning">Warning</string>
    <string name="date_format">Date Format</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="in_app_data">In-App Data</string>
    <string name="fraction_digits">Fraction Digits</string>
    <string name="category_management">Category Management</string>
    <string name="import_and_export">Import and Export</string>
    <string name="delete_all_items">Delete all items</string>
    <string name="clear_user_cache">Clear user cache</string>
    <string name="about_this_app">About this App</string>
    <string name="in_app_purchases">In-App Purchases</string>
    <string name="warn_delete_all_items">Do you really want to delete all items?</string>
    <string name="signin_first">Please Sign-in first"</string>
    <string name="success_cleared_cache">Successfully cleared cache</string>
    <string name="failure_cleared_cache">Failed cleared cache</string>
    <string name="canceled_cleared_cache">Canceled cleared cache</string>
    <string name="app_stores_user_cache">Kakeibo stores user data in cache to easily connect to Google from the next time on.\n\nDo you want to clear cache?</string>
    <string name="hide_display_reorder_categories">Hide, Display and Reorder Categories</string>
    <string name="reorder_categories">Reorder Categories</string>
    <string name="reorder_categories_for_display">Reorder Categories to display on INPUT screen</string>
    <string name="num_categories_per_row">Number of Categories per row</string>
    <string name="hide_categories">Select Categories to hide</string>
    <string name="display_categories">Select Categories to display</string>
    <string name="here_are_the_categories_on_input_screen">Here are the Categories to be displayed on INPUT screen</string>
    <string name="the_app_version">The app version</string>
    <string name="inst_long_tap_to_move_icons">Long tap to move icons.</string>
    <string name="inst_keep_pressing_longer">Push longer</string>
    <string name="remaining_spots_colon">Remaining spots: %d</string>
    <string name="version_etc">Installed version, etc</string>
    <string name="purchased_items">Purchased Items</string>
    <string name="create_category">Create a Category</string>
    <string name="custom_categories">Custom Categories</string>
    <string name="no_custom_category">No Custom Category found</string>
    <string name="err_cannot_add_category">"Cannot add any more. Please note the maximum count "</string>
    <string name="quest_determine_category_order">The icons will be displayed in the specified order. Do you want to proceed?</string>
    <string name="quest_category_creation_do_you_want_to_proceed">A Category is about to be created. Do you want to proceed?</string>
    <string name="msg_category_created">A Category is created.</string>
    <string name="msg_category_updated">The Category is updated.</string>
    <string name="draw_icon">Please draw and design icon</string>
    <string name="pref_key_date_format" translatable="false">pref_key_date_format</string>
    <string name="pref_key_fraction_digits" translatable="false">pref_key_fraction_digits</string>
    <string name="pref_key_widget_and_font_size" translatable="false">pref_key_widget_and_font_size</string>
    <string name="pref_key_delete_all_data" translatable="false">pref_key_delete_all_data</string>
    <string name="dash" translatable="false">-</string>
</resources>