<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/general"
        android:icon="@drawable/ic_info_black_24dp">
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_list_date_format"
            android:entryValues="@array/pref_list_date_format_values"
            android:key="@string/pref_key_date_format"
            android:summary="%s"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/date_format" />
        <ListPreference
            android:defaultValue="0"
            android:entries="@array/pref_list_fraction_digits"
            android:entryValues="@array/pref_list_fraction_digits_values"
            android:key="@string/pref_key_fraction_digits"
            android:summary="%s"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/fraction_digits" />
        <ListPreference
            android:defaultValue="1"
            android:entries="@array/pref_list_widget_and_font_size"
            android:entryValues="@array/pref_list_widget_and_font_size_values"
            android:key="@string/pref_key_widget_and_font_size"
            android:summary="%s"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:title="@string/widget_and_font_size" />
    </PreferenceCategory>
<!--    <PreferenceCategory-->
<!--        android:title="@string/categories">-->
<!--        <Preference-->
<!--            android:key="@string/pref_key_categories"-->
<!--            android:title="@string/categories"-->
<!--            android:negativeButtonText="@string/no"-->
<!--            android:positiveButtonText="@string/yes">-->
<!--        </Preference>-->
<!--    </PreferenceCategory>-->
    <PreferenceCategory
        android:title="@string/in_app_data"
        android:icon="@drawable/ic_perm_data_setting_black_24dp">
        <Preference
            android:key="@string/pref_key_delete_all_data"
            android:title="@string/delete_all_items"
            android:negativeButtonText="@string/no"
            android:positiveButtonText="@string/yes">
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
