<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sign_in"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/sign_in"
            android:visible="false"
            android:orderInCategory="10"/>
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/sign_out"
            android:visible="false"
            android:orderInCategory="10"/>
        <item
            android:id="@+id/in_app_purchases"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/in_app_purchases"
            android:visible="false"
            android:orderInCategory="11"/>
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_mikan"
            android:title="@string/about_this_app"
            android:orderInCategory="100"/>
    </group>

</menu>