<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:paddingTop="@dimen/fragment_padding"
        android:text="@string/draw_icon"/>

    <com.divyanshu.draw.widget.DrawView
        android:id="@+id/draw_view"
        android:layout_centerInParent="true"
        android:layout_width="@dimen/draw_view_canvas_sides"
        android:layout_height="@dimen/draw_view_canvas_sides"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/draw_view"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imb_clear_canvas"
            android:layout_width="@dimen/draw_view_buttons_sides"
            android:layout_height="@dimen/draw_view_buttons_sides"
            android:src="@drawable/ic_brightness_1_accent_24dp"
            android:background="@color/color_emboss"
            android:contentDescription="@string/cancel"
            style="?android:attr/buttonBarButtonStyle" />

        <ImageButton
            android:id="@+id/imb_undo"
            android:layout_width="@dimen/draw_view_buttons_sides"
            android:layout_height="@dimen/draw_view_buttons_sides"
            android:src="@drawable/ic_undo_accent_24dp"
            android:background="@color/color_emboss"
            android:contentDescription="@string/next"
            style="?android:attr/buttonBarButtonStyle"/>

        <ImageButton
            android:id="@+id/imb_redo"
            android:layout_width="@dimen/draw_view_buttons_sides"
            android:layout_height="@dimen/draw_view_buttons_sides"
            android:src="@drawable/ic_redo_accent_24dp"
            android:background="@color/color_emboss"
            android:contentDescription="@string/back"
            style="?android:attr/buttonBarButtonStyle"/>

        <ImageButton
            android:id="@+id/imb_thickness"
            android:layout_width="@dimen/draw_view_buttons_sides"
            android:layout_height="@dimen/draw_view_buttons_sides"
            android:src="@drawable/ic_swap_vertical_circle_accent_24dp"
            android:background="@color/color_emboss"
            android:contentDescription="@string/stroke_thickness"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rll_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_alignParentBottom="true"
        android:background="@color/color_background">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/back"
            android:textColor="@color/color_black"
            android:background="@color/color_background"
            android:contentDescription="@string/back"/>

        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/done"
            android:textColor="@color/color_black"
            android:background="@color/color_background"
            android:contentDescription="@string/next"/>
    </RelativeLayout>

</RelativeLayout>