<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/frl_card_amount_range"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include layout="@layout/card_background"/>

    <android.support.v7.widget.CardView
        android:id="@+id/cdv_amount_range"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/card_view_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="@dimen/card_view_horizontal_padding"
            android:paddingEnd="@dimen/card_view_horizontal_padding"
            android:paddingTop="@dimen/card_view_vertical_padding"
            android:paddingBottom="@dimen/card_view_vertical_padding">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/amount_range"
                android:textSize="@dimen/char_size_mid"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/edt_amount_min"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/min"
                    android:inputType="numberDecimal"
                    android:digits="0123456789."/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/dash"/>
                <EditText
                    android:id="@+id/edt_amount_max"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:hint="@string/max"
                    android:digits="0123456789."/>
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</FrameLayout>