<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/lnl_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/fragment_padding"
        android:paddingEnd="@dimen/fragment_padding"
        android:paddingTop="@dimen/fragment_padding"
        android:paddingBottom="@dimen/fragment_padding">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txv_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/color_colon"/>
            <Button
                android:id="@+id/btn_color"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:text="@string/expense"
                android:textColor="@android:color/black"
                android:background="@drawable/gradient_expense"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_colon"/>
            <EditText
                android:id="@+id/edt_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="8"
                android:hint="@string/hint_name_max_8_characters"
                android:inputType="textCapCharacters"
                android:gravity="center_vertical|end"/>
            <Button
                android:id="@+id/btn_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="false"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:id="@+id/imb_remove"
                android:layout_width="@dimen/imv_exit_search_sides"
                android:layout_height="@dimen/imv_exit_search_sides"
                android:layout_gravity="center_vertical"
                android:background="@drawable/btn_roundcorner"
                android:src="@drawable/ic_close_white"
                android:visibility="invisible"
                android:contentDescription="@string/close"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="false"
                style="?android:attr/buttonBarButtonStyle" />
            <ImageButton
                android:id="@+id/imb_add"
                android:layout_width="@dimen/imv_exit_search_sides"
                android:layout_height="@dimen/imv_exit_search_sides"
                android:layout_gravity="center_vertical|end"
                android:background="@drawable/btn_roundcorner"
                android:src="@drawable/ic_add_white"
                android:contentDescription="@string/add"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/txv_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/icon_colon"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <Button
                android:id="@+id/btn_default_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_icons"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rll_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/tab_height"
        android:layout_above="@id/ad_container"
        android:background="@color/colorBackground">

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:text="@string/back"
            android:textColor="@color/colorBlack"
            android:background="@color/colorBackground"
            android:contentDescription="@string/back"/>
        <Button
            android:id="@+id/btn_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:text="@string/done"
            android:textColor="@color/colorBlack"
            android:background="@color/colorBackground"
            android:contentDescription="@string/next"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/ad_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>